kubernetes-from-scratch/k8/manifests/hello-app/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokedex
  labels:
    app: pokedex
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pokedex
  template:
    metadata:
      labels:
        app: pokedex

    spec:
      containers:
        - name: pokemon
          image: dersimabbas/pokedex-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "100m"
      restartPolicy: Always
