kubernetes-from-scratch/k8/manifests/hello-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxdemo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pokemon.192.168.56.30.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pokedex-service
                port:
                  number: 80
